--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,61 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# Dependencies
 /node_modules
 /.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+.pnp.js
+.yarn/install-state.gz
+yarn-error.log
+# Firebase emulators
+firebase-debug.log
+firestore-debug.log
+ui-debug.log
+pubsub-debug.log
+database-debug.log
+storage-debug.log
+*.emulators.export
 
-# testing
+# Testing
 /coverage
 
-# next.js
+# Next.js
 /.next/
 /out/
 
-# production
+# Production
 /build
 
-# misc
+# Misc
 .DS_Store
 *.pem
+*.log
+# IntelliJ IDEA files
+.idea
+*.iml
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
+# VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 
-# vercel
+# Local Env Files
+# IMPORTANT: .env is NOT listed here by default, so it CAN be committed if desired.
+# Secrets should generally be in .env.local or environment variables on the host.
+.env.local
+.env.development.local
+.env.production.local
+.env.test.local
+
+# Vercel
 .vercel
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Turborepo
+.turbo
 
-.genkit/*
+# ESLint cache
+.eslintcache
 
-
-# firebase
-firebase-debug.log
-firestore-debug.log
+# Prettier cache
+.prettiercache
